tests/NormalTests/paczka1/fuzzy1/47298952.err
Error in line 4: R8NDP7F S496 64,2
Error in line 3: La1mgDCLm S496 52,1
Error in line 15: RrE4kM S274 97,9
Error in line 17: oNhOazz S274 68,5
Error in line 12: La1mgDCLm S274 72,3
Error in line 13: R8NDP7F S274 17,2
Error in line 16: RrE4kM S119 26,3
Error in line 29: S8XXOp S496 47,6
